--- a/src/app.css
+++ b/src/app.css
@@ -7,6 +7,10 @@
     /* opacity: 50%; */
 }
 
+.basic_border {
+    border: black 2px solid;
+}
+
 .test {
     color: red;
     background-color: black;
